// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VChip.vue should be removable 1`] = `

<span tabindex="0"
      class="chip chip--removable"
>
  <span class="chip__content">
    <div class="chip__close">
      <i aria-hidden="true"
         class="icon material-icons"
      >
        cancel
      </i>
    </div>
  </span>
</span>

`;

exports[`VChip.vue should be removable 2`] = `

<span tabindex="0"
      class="chip chip--removable"
      style="display: none;"
>
  <span class="chip__content">
    <div class="chip__close">
      <i aria-hidden="true"
         class="icon material-icons"
      >
        cancel
      </i>
    </div>
  </span>
</span>

`;

exports[`VChip.vue should have a chip class 1`] = `

<span tabindex="0"
      class="chip"
>
  <span class="chip__content">
  </span>
</span>

`;
